<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DevanSuperNotes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notes_description">NotesDescription</string>
    <string name="Title">Note Title:</string>
    <string name="Note">Note:</string>
    <string name="add">+</string>
    <string name="add_title">add</string>
    <string name="Save">SAVE</string>
    <string name="Cancel">CANCEL</string>
    <string name="Delete">DELETE</string>
    <string name="Content">Input Content</string>
    <string name="TitleInput">Input Note Title</string>

</resources>
